<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@android:color/holo_orange_light"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:text="@string/hello_blank_fragment"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/settings_name"
        />

    <EditText
        android:id="@+id/settings_name_input"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="25dp"
        android:textAlignment="center"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/settings_server"
        />

    <EditText
        android:id="@+id/settings_server_input"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="25dp"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/settings_token"
    />

    <EditText
        android:id="@+id/settings_token_input"
        android:layout_width="280dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="25dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/settings_pwd"
        />

    <EditText
        android:id="@+id/settings_pwd_input"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAlignment="center"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        >

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"/>

        <Button
            android:id="@+id/notnow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"/>

    </LinearLayout>


</LinearLayout>